--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "prepare": "husky",
         "prebuild": "rimraf dist",
-        "clean": "rimraf dist && rimraf node_modules && yarn cache clean",
+        "clean": "rimraf dist && rimraf node_modules.cache && yarn cache clean",
         "build": "nest build",
         "format": "prettier --write '{src,test}/**/*.{ts,json,yml,yaml}' && prettier --write '*.{ts,json,yml,yaml,mjs}'",
         "start": "nest start",
@@ -18,6 +18,7 @@
         "lint:staged": "lint-staged",
         "lint:fix": "eslint --fix",
         "test": "TZ=UTC jest --config test/jest.json --passWithNoTests --forceExit",
+        "swagger": "start http://localhost:8000/api/docs",
         "deadcode": "ts-prune --project tsconfig.json --unusedInModule --skip *.json",
         "spell": "cspell lint --config cspell.json '{src,test}/**/*.ts' --color --gitignore --no-must-find-files --no-summary --no-progress || true",
         "package:upgrade": "npx npm-check-updates -u",
@@ -45,6 +46,7 @@
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.2",
         "compression": "^1.8.0",
+        "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "helmet": "^8.1.0",
         "mongoose": "^8.16.1",
