--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
         "build": "nest build",
         "format": "prettier --write '{src,test}/**/*.{ts,json,yml,yaml}' && prettier --write '*.{ts,json,yml,yaml,mjs}'",
         "start": "nest start",
-        "start:dev": "clear && nest start --watch",
-        "start:prod": "node dist/main",
+        "start:dev": "yarn env:copy:local && clear && nest start --watch",
+        "start:prod": "yarn env:copy:production && node dist/main",
+        "env:copy:local": "cp .env.local .env",
+        "env:copy:production": "cp .env.production .env",
         "lint": "eslint",
         "lint:staged": "lint-staged",
         "lint:fix": "eslint --fix",
@@ -28,6 +30,8 @@
         "migrate:remove": "nestjs-command remove:user && nestjs-command remove:category"
     },
     "dependencies": {
+        "@aws-sdk/client-s3": "^3.883.0",
+        "@aws-sdk/s3-request-presigner": "^3.883.0",
         "@nestjs/axios": "^4.0.0",
         "@nestjs/cache-manager": "^3.0.1",
         "@nestjs/common": "^11.1.3",
