fix: session alive after logout

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
         "build": "nest build",
         "format": "prettier --write '{src,test}/**/*.{ts,json,yml,yaml}' && prettier --write '*.{ts,json,yml,yaml,mjs}'",
         "start": "nest start",
-        "start:dev": "yarn env:copy:local && clear && nest start --watch",
+        "start:local": "yarn env:copy:local && clear && nest start --watch",
         "start:prod": "yarn env:copy:production && node dist/main",
+        "start:qa": "yarn env:copy:qa && nest start --watch",
         "env:copy:local": "cp .env.local .env",
         "env:copy:production": "cp .env.production .env",
+        "env:copy:qa": "cp .env.qa .env",
         "lint": "eslint",
         "lint:staged": "lint-staged",
         "lint:fix": "eslint --fix",
