--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
         "reflect-metadata": "^0.2.2",
         "response-time": "^2.3.3",
         "rxjs": "^7.8.2",
-        "uuid": "^12.0.0"
+        "uuid": "^12.0.0",
+        "keyv": "^5.0.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.8.1",
