--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "helmet": "^8.1.0",
+        "keyv": "^5",
         "mongoose": "^8.16.1",
         "ms": "^2.1.3",
         "nestjs-command": "^3.1.5",
@@ -66,8 +67,7 @@
         "reflect-metadata": "^0.2.2",
         "response-time": "^2.3.3",
         "rxjs": "^7.8.2",
-        "uuid": "^12.0.0",
-        "keyv": "^5.0.0"
+        "uuid": "^12.0.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^19.8.1",
