--- a/.env.example
+++ b/.env.example
@@ -19,7 +19,7 @@ DATABASE_URL=mongodb://localhost:27017/blogora
 DATABASE_DEBUG=false
 
 # CORS
-MIDDLEWARE_CORS_ORIGIN=http://localhost:3000
+MIDDLEWARE_CORS_ORIGIN=http://localhost:3000,https://blogora-api-943852915678.europe-west1.run.app
 
 # AWS
 AWS_REGION=us-east-1
